--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,48 @@
 img {
     max-width: 100%;
 }
+/* COMMON */
+/* Layout */
+.container {
+    width: 80%;
+    max-width: 1100px;
+    margin: 0 auto;
+    /* debug */
+    border: 1px solid black;
+    min-height: 300px;
+  }
+  .section {
+    padding: 30px 0;
+  }
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    row-gap: 10px;
+  }
+  .col {
+    width: calc(95% / 3);
+    /* debug */
+    border: 2px solid blue;
+    min-height: 200px;
+  }
+  .card {
+    position: relative;
+  }
+  .discount {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: green;
+    padding: 5px;
+  }
+  .like {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    font-size: 2rem;
+    cursor: pointer;
+  }
+  .card:hover .like {
+    color: red;
+  }
